// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`文字排版 快照测试 基本文字排版 1`] = `
<div
  className="TestWrapper__Container-sc-1mof8la-0 fadnqN"
>
  <p
    className="Typography__TypographyWrapper-sc-12agh80-0 bVKjyc sinoui-typography sinoui-typography--overline"
    color="textPrimary"
    type="overline"
  >
    Overline
  </p>
</div>
`;

exports[`文字排版 快照测试 设置属性 1`] = `
<div
  className="TestWrapper__Container-sc-1mof8la-0 fadnqN"
>
  <h2
    className="Typography__TypographyWrapper-sc-12agh80-0 bVKjyc sinoui-typography sinoui-typography--overline"
    color="textPrimary"
    type="overline"
  >
    Overline
  </h2>
  <p
    className="Typography__TypographyWrapper-sc-12agh80-0 cglcYe sinoui-typography sinoui-typography--overline"
    color="textPrimary"
    type="overline"
  >
    Overline
  </p>
  <p
    className="Typography__TypographyWrapper-sc-12agh80-0 zHZvF sinoui-typography sinoui-typography--overline"
    color="textPrimary"
    type="overline"
  >
    Overline
  </p>
  <p
    className="Typography__TypographyWrapper-sc-12agh80-0 dnvYBz sinoui-typography sinoui-typography--overline"
    color="success"
    type="overline"
  >
    Overline
  </p>
</div>
`;

exports[`文字排版 快照测试 颜色设置 1`] = `
<div
  className="TestWrapper__Container-sc-1mof8la-0 fadnqN"
>
  <p
    className="Typography__TypographyWrapper-sc-12agh80-0 bVKjyc sinoui-typography sinoui-typography--overline"
    color="textPrimary"
    type="overline"
  >
    Overline
  </p>
  <p
    className="Typography__TypographyWrapper-sc-12agh80-0 LBWNa sinoui-typography sinoui-typography--overline"
    color="primary"
    type="overline"
  >
    Overline
  </p>
  <p
    className="Typography__TypographyWrapper-sc-12agh80-0 kIMTZX sinoui-typography sinoui-typography--overline"
    color="secondary"
    type="overline"
  >
    Overline
  </p>
  <p
    className="Typography__TypographyWrapper-sc-12agh80-0 bVKjyc sinoui-typography sinoui-typography--overline"
    color="textPrimary"
    type="overline"
  >
    Overline
  </p>
  <p
    className="Typography__TypographyWrapper-sc-12agh80-0 epHAnT sinoui-typography sinoui-typography--overline"
    color="textSecondary"
    type="overline"
  >
    Overline
  </p>
  <p
    className="Typography__TypographyWrapper-sc-12agh80-0 UVOqv sinoui-typography sinoui-typography--overline"
    color="error"
    type="overline"
  >
    Overline
  </p>
  <p
    className="Typography__TypographyWrapper-sc-12agh80-0 jolbdo sinoui-typography sinoui-typography--overline"
    color="warning"
    type="overline"
  >
    Overline
  </p>
  <p
    className="Typography__TypographyWrapper-sc-12agh80-0 dnvYBz sinoui-typography sinoui-typography--overline"
    color="success"
    type="overline"
  >
    Overline
  </p>
  <p
    className="Typography__TypographyWrapper-sc-12agh80-0 cFAarC sinoui-typography sinoui-typography--overline"
    color="info"
    type="overline"
  >
    Overline
  </p>
</div>
`;
